# src/controllers/auth.controller.ts
@@ -22,7 +22,23 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   userName: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test("at-least-one-number", "Contains at least one number", (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password not match"),
@@ -30,6 +46,10 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+     #swagger.tags = ["Auth"]
+     */
+
     const { fullName, userName, email, password, confirmPassword } =
       req.body as TRegister;
 
@@ -64,15 +84,17 @@ export default {
 
   async login(req: Request, res: Response) {
     /**
- #swagger.requestBody = {
- required: true,
- schema: { $ref: "#/components/schemas/LoginRequest" }}
- */
+      #swagger.tags = ["Auth"]
+      #swagger.requestBody = {
+      required: true,
+      schema: { $ref: "#/components/schemas/LoginRequest" }}
+    */
 
     const { identifier, password } = req.body as unknown as TLogin;
     try {
       const userByIdentifier = await UserModel.findOne({
         $or: [{ email: identifier }, { userName: identifier }],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -111,6 +133,7 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
+     *#swagger.tags = ["Auth"]
      #swagger.security = [{
           "bearerAuth": []
       }]
@@ -123,6 +146,40 @@ export default {
       res.status(200).json({
         message: "Success Get User Profile",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ["Auth"]
+      #swagger.requestBody = {
+        required: true,
+        schema: { $ref: "#/components/schemas/ActivationRequest" }}
+     */
+
+    try {
+      const { code } = req.body as { code: string };
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+      res.status(200).json({
+        message: "Success Activation",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
